[package]
name = "moq-log"
authors = ["Danny Grispen"]
version = "0.1.0"
edition = "2021"
description = "Media over QUIC - Logging based on qlog"
repository = "https://github.com/DannyG-1952723/moq-rs"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = "3.12.0"
