[package]
name = "qlog-rs"
authors = ["Danny Grispen"]
version = "0.4.0"
edition = "2021"
description = "Library that allows logging qlog events"
repository = "https://github.com/DannyG-1952723/qlog-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["logging", "network-programming"]

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = "3.12.0"

[features]
moq-transfork = []
quic-10 = []
